opam-version: "2.0"
version: "dev"
maintainer: "Samuel Mimram <smimram@gmail.com>"
authors: "Samuel Mimram <smimram@gmail.com>"
homepage: "http://smimram.github.io/ocaml-glpk/"
license: "GPL-2"
dev-repo: "git+https://github.com/smimram/ocaml-glpk.git"
bug-reports: "https://github.com/smimram/ocaml-glpk/issues"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: ["ocaml" "dune"]
depexts: [
  ["libglpk-dev"] {os-distribution = "debian"}
  ["libglpk-dev"] {os-distribution = "ubuntu"}
  ["homebrew/science/glpk"] {os = "macos" & os-distribution = "homebrew"}
]
synopsis: "Bindings for GLPK"
description: """
ocaml-glpk are OCaml bindings to GLPK (GNU Linear Programming Kit)
which is a package intended for solving large-scale linear programming
(LP), mixed integer programming (MIP), and other related problems. The
library is released under the GPL license (like GLPK itself)."""
